GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.20alpha3 :
       
        - Relax checks for PCL5 header to accomodate some strange
          printer drivers.
          
        - Now hardware accounting method works like software
          accounting method wrt the subprocess' output.
          
        - Hardware and Software accounting stop the print queue  
          when the accounting subprocess didn't work. This will
          be configurable in the near future.
          
    - 1.20alpha2 :
    
        - Now software accounting method reads accounter's
          answer until a line with a single integer is 
          obtained or until all of its output has been read.
          This should fix the problem some people have
          when strange locale related messages are sent
          when running subprocesses (Solaris only ?).
          
        - First version of ESC/P2 analyzer. Seems to work
          ok at least with 'epson', 'epsonc', 'eps9mid' 
          and 'esp9high' ghostscript devices. Needs more
          work to correctly analyze other devices.
        
    - 1.20alpha1 : 
    
        - Fixed problem with number of copies in PCLXL parser.
        
        - Fixed problem with number of copies in PCL5 parser,
          when number of copies was set outside of and before first
          page.
        
        - Added workaround for number of copies directly set in
          PostScript code.
          
        - Added german translation.
        
        - Fixed problem on first print for user group quota when
          "enforcement: strict" is used.
        
        - Fixed interpolation problem in french translation.
        
    - 1.19 :
    